--- a/meu/trabalho2/trabalho/trabalho.html
+++ b/meu/trabalho2/trabalho/trabalho.html
@@ -180,6 +180,7 @@
             <button type="submit">Enviar</button>
         </div>
     </section>
+<button id="btn-tema" class="botao-tema" title="Alternar Tema">🌙</button>
      <footer id="contato">
         <p>Siga-nos nas redes sociais</p>
         <ul>
