--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="portuguese">
 <head>
-    <link rel="stylesheet" href="trabalhocss/trabalho2.css">
+    <link rel="stylesheet" href="/meu/trabalho2/trabalho/trabalhocss/trabalho2.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +37,7 @@
     <div class="gallery-container">
     <div class="produto card">
         <h3>Radar</h3>
-        <img src="Fotos/radar.jpg" alt="Radar">
+        <img src="/meu/trabalho2/trabalho/Fotos/radar.jpg" alt="Radar">
         <div class="botoes-card">
             <button class="btn-curtir">
                 🤍 Curtir <span class="contagem">15</span>
@@ -47,7 +47,7 @@
     </div>
     <div class="produto card">
         <h3>Drone</h3>
-        <img src="Fotos/drone.webp" alt="Drone">
+        <img src="/meu/trabalho2/trabalho/Fotos/drone.webp" alt="Drone">
         <div class="botoes-card">
             <button class="btn-curtir">
                 🤍 Curtir <span class="contagem">42</span>
@@ -57,7 +57,7 @@
     </div>
     <div class="produto card">
         <h3>Armamento</h3>
-        <img src="Fotos/armamento.avif" alt="Armamento">
+        <img src="/meu/trabalho2/trabalho/Fotos/armamento.avif" alt="Armamento">
         <div class="botoes-card">
             <button class="btn-curtir">
                 🤍 Curtir <span class="contagem">8</span>
@@ -106,8 +106,8 @@
  </div>
         </section>
         <video controls width="100" height="50">
-        <source src="video/Meu Vídeo-3.mp4" type="video/mp4"> 
-        <track kind="subtitles" srclang="pt-br" src="video/Meu Vídeo-3.vtt" label="legendas pt-br"></video> 
+        <source src="/meu/trabalho2/trabalho/video/Meu Vídeo-3.mp4" type="video/mp4"> 
+        <track kind="subtitles" srclang="pt-br" src="/meu/trabalho2/trabalho/video/Meu Vídeo-3.vtt" label="legendas pt-br"></video> 
          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3740.6975269823147!2d-40.30178912513545!3d-20.354110551654525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb8160595555555%3A0xeab993fdd7de1f61!2sUniversidade%20Vila%20Velha%20-%20UVV!5e0!3m2!1spt-BR!2sbr!4v1755858793660!5m2!1spt-BR!2sbr" width="600" 
     height="450"
     style="border:0;" 
@@ -132,7 +132,7 @@
             <button type="submit" onclick="alert('Enviado')">Inscrever-se</button>
         </form>
         <h1> Formulário</h1>
-        <form action="procesar_formulario.php" method="POST">
+        <form action="/meu/trabalho2/trabalho/procesar_formulario.php" method="POST">
             <p>
                 <label for="nombre">Nome:</label>
                 <input type="text" id="nombre" name="nombre" required>
@@ -142,7 +142,7 @@
                 <input type="email" id="email" name="email" required>
             </p>
         </form>
-        <form action="procesar_formulario.php" method="POST">
+        <form action="/meu/trabalho2/trabalho/procesar_formulario.php" method="POST">
             <fieldset>
                 <legend>Cargo Pretendido</legend>
                 <p>
@@ -170,7 +170,7 @@
         <div class="container">
             <p class="termos-texto">
                 Ao clicar em "Aceitar e Continuar", você confirma que leu e concorda com os 
-                <a href="termos/seu_arquivo_de_termos.html" target="_blank" rel="noopener noreferrer">Termos de Uso</a>
+                <a href="/meu/trabalho2/trabalho/termos/seu_arquivo_de_termos.html" target="_blank" rel="noopener noreferrer">Termos de Uso</a>
             </p>
             <form action="pagina_de_destino.php" method="POST">
                 <input type="hidden" name="termos_aceitos" value="true">
@@ -190,6 +190,6 @@
         </ul>
         <p>© 2025 Empresa Neurobyte - Todos os direitos reservados.</p>
     </footer>
-    <script src="trabalho.js"></script>
+    <script src="/meu/trabalho2/trabalho/trabalho.js"></script>
 </body>
 </html>
