--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="portuguese">
 <head>
-    <link rel="stylesheet" href="/meu/trabalho2/trabalho/trabalhocss/trabalho2.css">
+    <link rel="stylesheet" href="trabalho2.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -190,6 +190,6 @@
         </ul>
         <p>© 2025 Empresa Neurobyte - Todos os direitos reservados.</p>
     </footer>
-    <script src="/meu/trabalho2/trabalho/trabalho.js"></script>
+    <script src="trabalho.js"></script>
 </body>
 </html>
